# cellestial-examples

./: README.md  _quarto.yml  custom.css  index.qmd  main.py  pyproject.toml
assets/: overall.html  per_logo.py  readme.md
docs/: custom.css  index.html  search.json
docs/examples/basic/: 01_scatter.html
docs/examples/dimensional/: 01_umaps.html  02_tsne.html  02_tsnes.html  03_pca.html  03_pcas.html
docs/examples/distribution/: 01_violin.html  01_violins.html  02_boxplot.html  02_boxplots.html
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
docs/site_libs/quarto-html/: quarto-syntax-highlighting-dark.css
examples/: ruff.toml
examples/basic/: 01_scatter.ipynb
examples/dimensional/: 01_umaps.ipynb  02_tsne.ipynb  02_tsnes.ipynb  03_pca.ipynb  03_pcas.ipynb
examples/distribution/: 01_violin.ipynb  01_violins.ipynb  02_boxplot.ipynb  02_boxplots.ipynb
examples/qc/: elbow.ipynb
